first pass at UG section - will smooth later

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -658,7 +658,7 @@ The misuses of one-sample KS test can be easily incorporated into graduate level
 classroom teaching for courses that cover parametric bootstrap. For example, at
 the University of Connecticut (UConn), JY has always included a demonstration of
 the misuse under unspecified parameters in STAT 5361, Statistical Computing. The
-catalog description of this course includes is: ``Use of computing for statistical
+catalog description of this course includes: ``Use of computing for statistical
 problems; obtaining features of distributions, fitting models and implementing
 inference. Basic numerical methods, nonlinear statistical methods, numerical
 integration, modern simulation methods.'' Bootstrap is covered under ``modern
@@ -683,7 +683,31 @@ structures extends beyond conventional statistics curricula, it presents an
 opportunity for advanced exploration in courses focused on statistical computing
 or multivariate analysis. 
 
+
 % Undergraduate level (could mention AZ's undergraduate thesis)
+At the undergraduate level, so far only the misuses of one-sample KS test have 
+been presented and demonstrated in a classroom setting. At UConn, ES 
+incorporated this material in STAT 3215, Applied Linear Regression in Data 
+Science, in the context of residual diagnostics and testing whether the 
+externally studentized residuals can be viewed as realizations of a standard 
+normal distribution for large samples. The catalog description of this course 
+states the following topics: ``Applied multiple 
+linear regression analysis in data science, with an emphasis on modern 
+statistical regression methods: simple linear regression and correlation 
+analysis, multiple linear regression, analysis of variance, goodness of fit, 
+comparing regression models through partial and sequential F tests, dummy 
+variables, regression assumptions and diagnostics, model selection and penalized 
+regression, prediction and model validation, principles of design of experiments, 
+one-way and two-way analysis of variance.'' Students in this course are required
+to have taken either two semesters of introductory statistics or a 
+Calculus~2-based statistical methods course as a prerequisite.  While students 
+in the class are exposed to the bootstrap in the context of linear regression 
+models, they are not in general familiar with serially dependency.  Thus, the 
+remedies and more complicated serially dependent settings were not presented at 
+the undergraduate level.  Serial dependence is covered in other
+undergraduate courses, and in fact, the contents of this manuscript were the 
+basis of AZ's undergraduate honors thesis. All concepts are certainly within 
+reach of UConn undergraduate Statistics and Statistical Data Science majors.     
 
 \section{Concluding Remarks}
 \label{sec:conclusion}
