add cover, minor typo fixes to ms and reply

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -742,7 +742,7 @@ simulation methods.''  The course is open to graduate students in Statistics,
 others with permission. Detailed R code and graphical illustrations available in
 the open-access course notes elucidate the distinctions between employing null
 hypotheses with and without defined parameters (accessible at: 
-\textit{author YY's github website}).
+\textit{author YY's github website; material printed to pdf for blinded review}).
 %\url{https://jun-yan.github.io/stat-5361/boot.html#parametric-bootstrap}).
 Students were able to follow the demonstration closely, gaining a clear
 understanding of the implications of using estimated parameters within test
@@ -859,8 +859,8 @@ than developing more advanced methods that few people would use in practice.
 
 
 \section*{Data Availability Statement}
-An R implementation of the proposed methods will be made publicly available upon 
-publication.
+An R implementation of the proposed methods as well as teaching materials are  
+included in the Supplementary Materials.  
 
 \appendix
 
