--- a/manuscript/reply.tex
+++ b/manuscript/reply.tex
@@ -101,17 +101,19 @@ Statistics and others with permission, that covers the bootstrap. Detailed R
 code and graphical illustrations were provided to students in the open-access 
 course notes to elucidate the distinctions between employing null
 hypotheses with and without defined parameters.  This link is included in the 
-unblinded version of the paper. \eds{Not sure how we can blind your github 
-website for the submission unless we actually don't include it in the blinded 
-version. Could we print to PDF the relevant section of the notes and include as 
-a supplement for review purposes?} 
+unblinded version of the paper; for the blinded review, we printed the 
+relevant portion of the notes to pdf and included this blinded pdf file in the 
+Supplemental Materials. %\eds{Not sure how we can blind your github 
+%website for the submission unless we actually don't include it in the blinded 
+%version. Could we print to PDF the relevant section of the notes and include as 
+%a supplement for review purposes?} 
 
 
 Similarly at the undergraduate-level, students in an R-based applied regression 
 course were provided with an R Markdown file with simulation code in order to 
 demonstrate how the KS test fails with estimated parameters in the hypothesized 
 distribution. The R Markdown file that was provided to students is included in 
-the Supplemental Materials. This R-based applied linear regression course are 
+the Supplemental Materials. This R-based applied linear regression course 
 has the following prerequisites: two semesters of introductory statistics OR a 
 Calculus~2-based statistical methods course.
 
